<resources>
    <string name="app_name">RecipeSearch</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_settings">Settings</string>
    <string name="search_hint">Input search query here! </string>
    <string name="my_fridge">My Fridge</string>
    <string name="my_recipes">My Recipes</string>
    <string name="shopping_list">Shopping List</string>
    <string name="write_new_item">Write New Item</string>
    <string name="add">Add</string>
    <string name="amount">Amount</string>
    <string name="expiration">Expiration Date</string>
    <string name="clear_shopping_list">Clear Shopping List</string>
    <string name="clear_all_data">Clear All Data</string>
    <string name="clear">Clear</string>
    <string name="recipe_search_options">Recipe Search Options</string>
    <string name="max_num_results">Max Number of Results</string>
    <string name="save_search_options">Save Search Options</string>
    <string name="way_to_search">Choose a Way to Search</string>
</resources>
