<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/my_fridge">
        <ImageView
            android:id="@+id/fridge_of_food"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@mipmap/fridge_of_food"
            android:background="#80757171"
            android:padding="2dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/fridge_of_food"
            android:layout_alignEnd="@id/fridge_of_food"
            android:layout_alignBottom="@id/fridge_of_food"
            android:gravity="bottom|center_horizontal"
            android:layout_margin="2dp"
            android:text="@string/my_fridge"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:background="#B3E5E5E5"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/my_recipes">
        <ImageView
            android:id="@+id/recipes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@mipmap/recipes"
            android:background="#80757171"
            android:padding="2dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/recipes"
            android:layout_alignEnd="@id/recipes"
            android:layout_alignBottom="@id/recipes"
            android:gravity="bottom|center_horizontal"
            android:layout_margin="2dp"
            android:text="@string/my_recipes"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:background="#B3E5E5E5"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/shopping_list">
        <ImageView
            android:id="@+id/grocery_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@mipmap/shopping_list"
            android:background="#80757171"
            android:padding="2dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/grocery_list"
            android:layout_alignEnd="@id/grocery_list"
            android:layout_alignBottom="@id/grocery_list"
            android:gravity="bottom|center_horizontal"
            android:layout_margin="2dp"
            android:text="@string/shopping_list"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:background="#B3E5E5E5"/>
    </RelativeLayout>
</LinearLayout>

</ScrollView>